crates/action-graph/tests/snapshots/action_graph_builder_test__action_graph_builder__setup_env__can_require_other_toolchains_from_project_config.snap
---
source: crates/action-graph/tests/action_graph_builder_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace"]
    1 [ label="SetupProto(1.2.3)"]
    2 [ label="SetupToolchain(tc-tier3:1.2.3)"]
    3 [ label="SetupEnvironment(tc-tier2-setup-env, bar)"]
    4 [ label="SetupEnvironment(tc-tier2-setup-env, baz)"]
    2 -> 0 [ label="required"]
    2 -> 1 [ label="required"]
    3 -> 2 [ label="required"]
    3 -> 0 [ label="required"]
    4 -> 0 [ label="required"]
}
