crates/action-graph/tests/snapshots/action_graph_builder_test__action_graph_builder__setup_env__can_require_other_toolchains_when_no_setup_environment_itself.snap
---
source: crates/action-graph/tests/action_graph_builder_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace"]
    1 [ label="SetupProto(1.2.3)"]
    2 [ label="SetupToolchain(tc-tier3:1.2.3)"]
    3 [ label="SetupToolchain(tc-tier2-reqs:1.2.3)"]
    4 [ label="SetupEnvironment(tc-tier2-reqs, bar)"]
    2 -> 0 [ label="required"]
    2 -> 1 [ label="required"]
    3 -> 2 [ label="required"]
    3 -> 0 [ label="required"]
    3 -> 1 [ label="required"]
    4 -> 2 [ label="required"]
    4 -> 0 [ label="required"]
    4 -> 3 [ label="required"]
}
