crates/action-graph/tests/snapshots/action_graph_builder_test__action_graph_builder__setup_env__graphs_multiple_projects.snap
---
source: crates/action-graph/tests/action_graph_builder_test.rs
expression: graph.to_dot()
---
digraph {
    0 [ label="SyncWorkspace"]
    1 [ label="SetupEnvironment(tc-tier2-setup-env, bar)"]
    2 [ label="SetupEnvironment(tc-tier2-setup-env, baz)"]
    1 -> 0 [ label="required"]
    2 -> 0 [ label="required"]
}
